force-app/main/default/objects/Contact/fields/Anni_Day__c.field-meta.xml
<CustomField>
    <fullName>Anni_Day__c</fullName>
    <formula>TEXT(DAY(  Joining_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anni Day</label>
    <type>Text</type>
</CustomField>