force-app/main/default/objects/Contact/fields/Anni_Month__c.field-meta.xml
<CustomField>
    <fullName>Anni_Month__c</fullName>
    <formula>TEXT(MONTH( Joining_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anni Month</label>
    <type>Text</type>
</CustomField>