force-app/main/default/objects/Contact/fields/Anni_number__c.field-meta.xml
<CustomField>
    <fullName>Anni_number__c</fullName>
    <formula>ROUND((TODAY() - Joining_Date__c) / 365.2425, 0)</formula>
    <label>Anni number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>