force-app/main/default/objects/Contact/fields/Anniversary_Count__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Count__c</fullName>
    <formula>IF(
    AND(
        NOT(ISNULL(Joining_Date__c)), 
        Joining_Date__c &lt;= TODAY()
    ),
    YEAR(TODAY()) - YEAR(Joining_Date__c) - 
    IF(
        DATE(YEAR(TODAY()), MONTH(Joining_Date__c), DAY(Joining_Date__c)) &gt; TODAY(),
        1,
        0
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>