force-app/main/default/objects/Contact/fields/Anniversary_Count_years__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Count_years__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Joining_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Count years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>