force-app/main/default/objects/Contact/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()), MONTH(Joining_Date__c), DAY(Joining_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>