force-app/main/default/objects/Contact/fields/Is_Anniversary_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Anniversary_Today__c</fullName>
    <formula>MONTH(TODAY()) = MONTH( Anniversary_Date__c ) &amp;&amp;
DAY(TODAY()) = DAY( Anniversary_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Anniversary Today</label>
    <type>Checkbox</type>
</CustomField>