force-app/main/default/objects/Contact/fields/Next_Work_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Next_Work_Anniversary__c</fullName>
    <formula>IF(
    MONTH(TODAY()) &gt; MONTH(Joining_Date__c) || 
    (MONTH(TODAY()) = MONTH(Joining_Date__c) &amp;&amp; DAY(TODAY()) &gt; DAY(Joining_Date__c)),
    DATE(YEAR(TODAY()) + 1, MONTH(Joining_Date__c), DAY(Joining_Date__c)),
    DATE(YEAR(TODAY()), MONTH(Joining_Date__c), DAY(Joining_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Work Anniversary</label>
    <type>Date</type>
</CustomField>